# IntegrationHub-CppTemplate

./: .gitignore  CMakeLists.txt  TokenCppDllTemplate.cpp  TokenCppDllTemplate.sln  TokenCppDllTemplate.vcxproj  TokenCppDllTemplate.vcxproj.filters  main.cpp  mainwindow.cpp  mainwindow.h  poscommunication.cpp  poscommunication.h
QtGUI/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  poscommunication.cpp  poscommunication.h
